doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\java programmes
-d
D:\java programmes\doc
-encoding
UTF-8
-charset
UTF-8
D:\java programmes\StringTokenizer\chemistry.java
<---- end of javadoc command ---->
Loading source file D:\java programmes\StringTokenizer\chemistry.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating D:\java programmes\doc\StringTokenizer\chemistry.html...
Generating D:\java programmes\doc\StringTokenizer\package-frame.html...
Generating D:\java programmes\doc\StringTokenizer\package-summary.html...
Generating D:\java programmes\doc\constant-values.html...
D:\java programmes\StringTokenizer\hh.java:15: error: reached end of file while parsing
            b=a[i].length();
                            ^
D:\java programmes\StringTokenizer\hh.java:16: error: reached end of file while parsing
            
            ^
Building index for all the packages and classes...
Building index for all classes...
Generating D:\java programmes\doc\allclasses-frame.html...
Generating D:\java programmes\doc\allclasses-noframe.html...
Generating D:\java programmes\doc\index.html...
2 errors
